crates/compiler/tests/scanner_test/snapshots/integration_test__scanner_test__scan-12.snap
---
source: crates/compiler/tests/scanner_test/mod.rs
assertion_line: 44
expression: "<a></a < / attr attr=\">\" >"
---
- StartTag:
    name: a
    attributes: []
    self_closing: false
- EndTag: a

