crates/compiler/tests/scanner_test/snapshots/integration_test__scanner_test__scan-18.snap
---
source: crates/compiler/tests/scanner_test/mod.rs
expression: "<!-- nested <!--> text -->"

---
- Comment: " nested <!"
- Text: " text -->"

