crates/compiler/tests/scanner_test/snapshots/integration_test__scanner_test__scan-3.snap
---
source: crates/compiler/tests/scanner_test/mod.rs
expression: "{{test}}"

---
- Interpolation: test

