crates/compiler/tests/scanner_test/snapshots/integration_test__scanner_test__scan-6.snap
---
source: crates/compiler/tests/scanner_test/mod.rs
assertion_line: 44
expression: "<tag =value />"
---
- StartTag:
    name: tag
    attributes:
      - name: "=value"
        value: ~
        name_loc:
          start: "Pos: 5, Ln: 1, Col: 6"
          end: "Pos: 11, Ln: 1, Col: 12"
        location:
          start: "Pos: 5, Ln: 1, Col: 6"
          end: "Pos: 12, Ln: 1, Col: 13"
    self_closing: true

